fix the gradient in dark mode

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -9,12 +9,18 @@
   --dark-color: rgb(202, 190, 202);
   --dark-color-transp: rgba(235, 237, 235, 0.86);
   --dark-color-extra-transp: rgb(235, 237, 235, 0.6);
+
+  /*
+* I also used this purple before:
+* rgb(37, 6, 37);
+* Was the end of the bg--gradient
+*/
 }
 
 .bg--gradient {
   background-color: var(--light-color);
   /*background: linear-gradient(to bottom, rgb(37, 6, 37) 0%,var(--light-color) 100%);*/
-  background: linear-gradient(to bottom, var(--light-color) 0%, rgb(37, 6, 37) 100%);
+  background: linear-gradient(to right, rgb(69, 71, 90) 0%, var(--light-gray-color) 100%);
 }
 
 .quote-card {
